# CProjects

./: CMakeLists.txt
projekt1/: projekt1.c
projekt2/: projekt2.c  projekt2.cpp
projekt3/: projekt3.c
projekt4/: projekt4-FIFO-lista.c  projekt4-FIFO-tablica.c  projekt4-LIFO-lista.c  projekt4-LIFO-tablica.c  projekt4.c
